--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -10,14 +10,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-      - name: Run placeholder script
-      - run: npm install
-      - run: node scraper.js
+          
+      - name: Install dependencies
+        run: npm install
+        
+      - name: Run scraper
+        run: node scraper.js
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+
 
 
