--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
 node_modules/
+outline.js
+dom.txt
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnp.*
+.pnp.js
+.idea/
+.vscode/
+*.sublime-workspace
+*.sublime-project
+coverage/
+build/
+dist/
+.cache/
+.next/
+out/
+*.log
+*.tsbuildinfo
+*.swp
+*.swo
+*.bak
+*.tmp
+
