--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
     "cheerio": "^1.1.0",
-    "node-fetch": "^2.7.0"
+    "dotenv": "^17.2.2",
+    "node-fetch": "^2.7.0",
+    "puppeteer": "^24.20.0"
   }
 }
